--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-121212121212121212121212== README
+<h1>README</h1>
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
