--- a/README.rdoc
+++ b/README.rdoc
@@ -16,6 +16,6 @@ This README describes steps are necessary to get the application up and running.
 
 * Run seeds: <tt>rake db:seed</tt>
 
-* Run server <tt>rails server</tt>
+* Run server: <tt>rails server</tt>
 
-* Go to page in your browser <tt>localhost:3000</tt>
+* Go to page in your browser with address: <tt>localhost:3000</tt>
